--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -2,14 +2,10 @@
   <aside class="col-sm-4">
     <div class="card">
       <div class="card-header">
-          <h3 calss="card-title"><%= @user.name %></h3>
-          <h6　class="card-subtitle"><%= @user.age %>歳</h6></h3>
+        <h3 class="card-title"><%= @user.name %></h3>
       </div>
       <div class="card-body">
         <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
-      </div>
-      <div class="card-body">
-        <h5><%= @user.coment %></h5>
       </div>
     </div>
     <%= render 'relationships/follow_button', user: @user %>
@@ -20,7 +16,6 @@
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings  <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers  <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
     </ul>
+    <%= render 'users', users: @followers %>
   </div>
-  <%= link_to 'アカウントを削除する', @users, method: :delete, data: { confirm: '本当に退会してよろしいですか？' }, class: 'btn btn-danger' %>
-  <br><%= link_to 'アカウントを編集する', edit_user_path, class: 'btn btn-primary' %>
 </div>
