--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -7,6 +7,9 @@
       <div class="card-body">
         <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
       </div>
+      <div class="card-body">
+        <%= link_to 'Likes', likes_user_path(@user), class: 'nav-link' %>
+      </div>
     </div>
     <%= render 'relationships/follow_button', user: @user %>
   </aside>
@@ -15,7 +18,6 @@
       <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Microposts<span class="badge badge-secondary"><%= @count_microposts %></span></a></li>
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings<span class="badge badge-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers<span class="badge badge-secondary"><%= @count_followers %></span></a></li>
-      <li class="nav-item"><a href="<%= likes_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user)) %>">Likes<span class="badge badge-secondary"><%= @count_likes %></span></a></li>
     </ul>
     <%= render 'users', users: @followings %>
   </div>
