--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,22 +1,28 @@
-<div class="row">
-  <aside class="col-sm-4">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="card-title"><%= @user.name %></h3>
+<ul class="list-unstyled">
+  <% @likes.each do |micropost| %>
+    <li class="media mb-3">
+      <img class="mr-2 rounded" src="<%= gravatar_url(micropost.user, { size: 50 }) %>" alt="">
+      <div class="media-body">
+        <div>
+          <%= link_to micropost.user.name, user_path(micropost.user) %>
+           <span class="text-muted">posted at <%= micropost.created_at %></span>
+        </div>
+        <div>
+          <p class="mb-0"><%= micropost.content %></p>
+        </div>
+        <div>
+          <% if current_user == micropost.user %>
+            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+          <% end %>
+          <%= render 'favorites/favorite_button',  micropost: micropost %>
+          <!-- @micropostインスタンスをmicropostローカル変数として取得 -->
+        </div>
       </div>
-      <div class="card-body">
-        <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 500 }) %>" alt="">
-      </div>
-    </div>
-    <%= render 'relationships/follow_button', user: @user %>
-  </aside>
-  <div class="col-sm-8">
-    <ul class="nav nav-tabs nav-justified mb-3">
-      <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Microposts  <span class="badge badge-secondary"><%= @count_microposts %></span></a></li>
-      <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings  <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
-      <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers  <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
-      <li class="nav-item"><a href="<%= likes_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(likes_user_path(@user)) %>">Likes     <span class="badge badge-secondary"><%= @count_likes %></span></a></li>
-    </ul>
-    <%= render 'likes', microposts: @likes %>
-  </div>
-</div>
+    </li>
+  
+<% end %>
+
+  
+<%= paginate @likes %>
+
+</ul>
